Fixed: Author/Book overview overflows
Bump react-measure to v2.5.2

--- a/frontend/src/Author/Details/AuthorDetails.css
+++ b/frontend/src/Author/Details/AuthorDetails.css
@@ -67,13 +67,13 @@
 
 .titleContainer {
   display: flex;
-  margin-bottom: 5px;
+  margin-top: -5px;
 }
 
 .title {
   font-weight: 300;
   font-size: 50px;
-  line-height: 50px;
+  line-height: 60px;
 }
 
 .toggleMonitoredContainer {
@@ -99,6 +99,7 @@
 .authorNavigationButtons {
   position: absolute;
   right: 0;
+  margin-top: 10px;
   white-space: nowrap;
 }
 
@@ -142,7 +143,7 @@
 }
 
 .overview {
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   margin-top: 8px;
   min-height: 0;
   font-size: $intermediateFontSize;
